// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Avatar /> should render the empty Avatar 1`] = `
<span
  class="inline-block overflow-hidden bg-gray-100 rounded-full w-12 h-12"
  data-testid="empty-avatar"
>
  <div />
</span>
`;

exports[`<Avatar /> should render the large Avatar 1`] = `
<img
  alt="Avatar"
  class="inline-block rounded-full w-14 h-14"
  src="https://gravatar.com/4405735f6f3129e0286d9d43e7b460d0"
/>
`;

exports[`<Avatar /> should render the medium Avatar as default 1`] = `
<img
  alt="Avatar"
  class="inline-block rounded-full w-12 h-12"
  src="https://gravatar.com/4405735f6f3129e0286d9d43e7b460d0"
/>
`;

exports[`<Avatar /> should render the small Avatar 1`] = `
<img
  alt="Avatar"
  class="inline-block rounded-full w-10 h-10"
  src="https://gravatar.com/4405735f6f3129e0286d9d43e7b460d0"
/>
`;
